# KontrafaktischeErkl-rungzurAD-Masterarbeit

./: .gitattributes  .gitignore  Dockerfile  Flowchart for Counterfactual Explanation Generation using deep generative models.drawio  Intersections_4.txt  LICENSE  README.md  final_combined_results_with_total_go_stop.csv  grid_based_counterfactual_results.csv  grid_based_summary_results.csv  latent_z_values_epoch_440.csv  pyproject.toml  requirements.txt  responses.csv  results.csv  summary_statistics.csv
.github/: CODEOWNERS
Projects/: calculate_results_grid_based_masking.py  calculate_results_latent_features.py  calculate_results_lime_on_images.py  calculate_results_object_detection_yolov5.py  calculate_time.py  combined_results.py  compare_counterfactuals.py  count_prediction.py  counterfactual_utils.py  read_save_images.py
carla_dataset_collection/: collect_images.py  data_collection.py  dataset_details.py  dataset_overview.ipynb  dataset_statistics_overview_for_labelling.py  label_data_set.py  label_dataset.py  label_dataset_for_4_classes.py  split_dataset.py
model/: classifier.pth
plots/: Intersections_4.txt  common_initial_predictions.csv  comparative_summary_across_methods.csv  comparative_summary_across_methods_with_percentage.csv  grid_based_masking_results.csv  grid_based_summary.csv  lime_masking_test_results.csv  lime_on_image_masking_results.csv  lime_on_image_summary.csv  lime_on_latent_masking_results.csv  lime_on_latent_summary.csv  object_detection_masking_results.csv  object_detection_summary.csv  similarity_metrics_extremes.csv  (+1 more)
(+192 files in other folders)
